# 3D_linal_task

./: CMakeLists.txt  README.md  main.cpp  makefile  triangles.cpp
geometry/: CMakeLists.txt
geometry/line/: line.cpp  line.hpp
geometry/plane/: plane.cpp  plane.hpp
geometry/point/: point.cpp  point.hpp
geometry/segment/: segment.cpp  segment.hpp
geometry/triangle/: triangle.cpp  triangle.hpp
geometry/vector/: vector.cpp  vector.hpp
inc/: double_operations.hpp  octree.hpp
inc/geometry/: triangle.hpp
include/: custom_assert.hpp  double_operations.hpp  line.hpp  octree.hpp  plane.hpp  point.hpp  triangle.hpp  triangles.hpp  triangles_old.hpp
include/double_operations/: double_operations.hpp
include/geometry/: line.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
source/: CMakeLists.txt  double_operations.cpp  line.cpp  plane.cpp  segment.cpp  triangle.cpp
source/geometry/: line.cpp  plane.cpp  point.cpp  segment.cpp  triangle.cpp  vector.cpp
src/: CMakeLists.txt
src/geometry/: triangle.cpp
test/: 2d_test_gen.py  CMakeLists.txt  EXTREMAL_TEST_GENERATOR.py  pyramid_test_gen.py  sloyoniy_pirog_test_gen.py  test.cpp  tests.sh
test/answers/: 04.ans  20.ans
test/correct_answers/: 12.ans
tests/: CMakeLists.txt  ans3  ans4  ans5  ans6  ans7  ans8  test.cpp
